--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -1,12 +1,8 @@
 ---
 title: "Welcome To My Blog"
 author: "MD S H"
-date: "2023-11-21"
-categories: [news]
+date: "2023-11-24"
+categories: [Start]
 ---
 
-This is the first post in a Quarto blog. Welcome!
-
-![](thumbnail.jpg)
-
-Since this post doesn't specify an explicit `image`, the first image in the post will be used in the listing page of posts.
+This is my first post in a Quarto blog. Welcome!
