--- a/posts/randomVariable/index.qmd
+++ b/posts/randomVariable/index.qmd
@@ -5,9 +5,9 @@ date: "2023-11-23"
 categories: [random variable, code, analysis, visualization]
 image: "rv.png"
 notebook-view:
-  - notebook: penguins.ipynb
-    title: "Random Variable with Penguin Dataset Plots"
-    url: https://colab.research.google.com/drive/18ZDH7hSoHgnN0tJNrqULA9bgRhQ7q5AX
+  - notebook: rv_visual.ipynb
+    title: "Random Variable with Scipy Library"
+    url: https://colab.research.google.com/drive/1-9rDrxgVgGw9JspIUhjT79ANonsbJrPp
 ---
 
 # Random Variable in Machine Learning
@@ -44,9 +44,17 @@ $S$ } $$\
 
 $$  \sum_{x \epsilon S} f(x) = 1  $$
 
+Code snippet for calculating PMF of a discrete random variable which follows binomial distribution:
+
+{{< embed rv_visual.ipynb#pmf-binomial echo=true >}}
+
+Then we can plot the PMF of that variable better visualization
+
+{{< embed rv_visual.ipynb#fig-pmf >}}
+
 ### **Probability Density Function** **(PDF)**
 
-The probability density function (PDF) a continuous random variable is the likelihood that the variable lies on a given range. Mathematically,\
+The probability density function (PDF) of a continuous random variable is the likelihood that the variable lies on a given range. Mathematically,\
 $$ \int_{a}^{b} f(x)dx = P(a< X <b) \mbox{ for any $a, b$ \(\epsilon\) $S$ satisfying a < b }$$
 
 which follows the following properties:
@@ -56,9 +64,17 @@ $S$ } $$
 
 $$  \int_{x \epsilon S} f(x)dx = 1  $$
 
+Code snippet for calculating PDF of a continuous random variable which follows normal distribution:
+
+{{< embed rv_visual.ipynb#pdf-normal echo=true >}}
+
+Then we can plot the PDF of that variable better visualization
+
+{{< embed rv_visual.ipynb#fig-pdf >}}
+
 ### **Cumulative Distribution Function** **(CDF)**
 
-The cumulative distribution function (PDF) a random variable is the likelihood that the variable is bounded within a given value. Mathematically,
+The cumulative distribution function (CDF) of a random variable is the likelihood that the variable is bounded within a given value. Mathematically,
 
 $$ F(x) = \sum_{z \epsilon S, z \leq x } f(z) \mbox{ for discrete random variables }$$\
 $$ F(x) = \int_{- \infty}^{x} f(z)dz  \mbox{ for continuous random variables }$$
@@ -67,28 +83,10 @@ Furthermore,
 
 $$  P(a< X \leq b) = F(b) - F(a)  $$
 
-## Visualization
+Code snippet for calculating CDF of a continuous random variable which follows normal distribution:
 
-For separating the actual environment in my local machine, I created a virtual environment and utilized the req.txt file to install the necessary library and packages.\
+{{< embed rv_visual.ipynb#cdf-normal echo=true >}}
 
-#### Example of Jupyter Embedding:
+Then we can plot the CDF of that variable better visualization
 
-```{python}
- 5 + 6 
-```
-
--   Some embed:
-
-{{< embed penguins.ipynb#fig-bill_ratio >}}
-
-You may include the code from a cell along with the output by using the `echo=true` option. For example, to include the code and the plot from the cell labelled `species-counts` the embed would be:
-
-{{< embed penguins.ipynb#species-counts echo=true >}}
-
-Showing some graph:
-
-{{< embed penguins.ipynb#fig-bill-marginal >}}
-
-```{python}
-pow(2, 3)
-```
+{{< embed rv_visual.ipynb#fig-cdf >}}
