Fixed floating notebook issues

--- a/posts/clustering/index.qmd
+++ b/posts/clustering/index.qmd
@@ -1,12 +1,16 @@
 ---
-title: "Dummy"
+title: "Clustering"
 author: "Md Shahedul Haque"
-date: "2023-10-22"
-categories: [random variable, code, analysis, visualization]
-image: "rv.png"
+date: "2023-11-27"
+categories: [clustering, code, visualization]
+image: "cluster.png"
+notebook-view:
+  - notebook: _cluster_visual.ipynb
+    title: "Clustering with Scipy Library"
+    url: https://colab.research.google.com/drive/1-9rDrxgVgGw9JspIUhjT79ANonsbJrPp
 ---
 
-# RV in Machine Learning
+## Clustering in Machine Learning
 
 A random variable (stochastic variable) is a real valued function from the domain of the sample space of a defined experiment. Generally, a random variable is denoted by capital letter (usually $X$ ) where small letter ($x$) denotes the observed value. For example, $X$ be the measurement of number of heads observed in an experiment of tossing two coins. Here, the sample space $S$ is:
 
@@ -26,7 +30,7 @@ In broader way, there are two categories of random variable:
 
 2.  Continuous Random Variable: Range of the observable value has some interval, bounded or unbounded. For instance, weight of different people in a class.
 
-### Density Functions
+## Density Functions
 
 ### **Probability Mass Function** **(PMF)**
 
@@ -39,6 +43,16 @@ $$  f(x) \geq 0 \mbox{ for any $x$ \(\epsilon\)
 $S$ } $$\
 
 $$  \sum_{x \epsilon S} f(x) = 1  $$
+
+Code snippet for calculating PMF of a discrete random variable which follows binomial distribution:
+
+{{< embed _cluster_visual.ipynb#pmf-binomial echo=true >}}
+
+Then we can plot the PMF of that variable better visualization
+
+{{< embed _cluster_visual.ipynb#fig-pmf >}}
+
+### 
 
 ### **Probability Density Function** **(PDF)**
 
@@ -63,16 +77,4 @@ Furthermore,
 
 $$  P(a< X \leq b) = F(b) - F(a)  $$
 
-## Visualization
-
-For separating the actual environment in my local machine, I created a virtual environment and utilized the req.txt file to install the necessary library and packages.
-
-#### Example of Jupyter Embedding:
-
-#### Some embed:
-
-{{< embed penguins.ipynb#fig-bill_ratio >}}
-
-You may include the code from a cell along with the output by using the `echo=true` option. For example, to include the code and the plot from the cell labelled `species-counts` the embed would be:
-
-{{< embed penguins.ipynb#species-counts echo=true >}}
+## 
