--- a/posts/clustering/index.qmd
+++ b/posts/clustering/index.qmd
@@ -6,75 +6,68 @@ categories: [clustering, code, visualization]
 image: "cluster.png"
 notebook-view:
   - notebook: _cluster_visual.ipynb
-    title: "Clustering with Scipy Library"
-    url: https://colab.research.google.com/drive/1-9rDrxgVgGw9JspIUhjT79ANonsbJrPp
+    title: "Clustering with scikit-learn Library"
+    url: https://colab.research.google.com/drive/1vjOGlh6ETKQdU_5ZYvwv6UrEZ8Rgshb9#scrollTo=VBhXxpLoE6c6
 ---
 
 ## Clustering in Machine Learning
 
-A random variable (stochastic variable) is a real valued function from the domain of the sample space of a defined experiment. Generally, a random variable is denoted by capital letter (usually $X$ ) where small letter ($x$) denotes the observed value. For example, $X$ be the measurement of number of heads observed in an experiment of tossing two coins. Here, the sample space $S$ is:
+Broadly there are three types of learning methods in ML:
 
-$$ S = {(H, H), (H, T), (T, H), (T, T) } $$
+1.  Supervised learning method: Label for corresponding datapoint is available.
 
-This 4 possible outcomes of this experiment constitute the domain of \$X\$. For each outcome, the random variable is calculates in this way:
+2.  Unsupervised learning method: Label for corresponding datapoint is unavailable.
 
-$$  X(H, H) = 2  $$\$\$ X(H, T) = 1 \$\$
+3.  Semisupervised learning method: Lable is available only for a small portion of all the datapoints, most of the datapoints lack label.
 
-$$  X(T, H) = 1 $$ \$\$ X(T, T) = 0 \$\$
+Clustering belongs to the category of unsupervised learning method. Generally, it is utilized as a process for finding meaningful structure, explanatory underlying processes, generative features, and groupings inherent in a set of examples. Clustering is the task of dividing the population or data points into a number of disjoint sets such that data points in the same sets are more similar to other data points in the same set and dissimilar to the data points in other sets. Consequently, clustering forms a collection of objects on the basis of similarity and dissimilarity between them. 
 
-## Types of Random Variable
+## Clustering methods
 
-In broader way, there are two categories of random variable:
+Clustering shapes the intrinsic grouping among the unlabelled data. There are no standard for good clustering. It depends on the user, and what criteria they may use which satisfy their need. Based on the assumptions and goal of the task, clustering algorithms can be divided into several categories: 
 
-1.  Discrete Random Variable: Range of the observable value is a finite set. For instance, in the previous two coins tossing $X$ is a discrete random variable with observable values $\{0, 1, 2\}$ .
+-   **Density-Based Methods:** Dense region has some similarities and is different from the lower dense region. For example, DBSCAN (Density-Based Spatial Clustering of Applications with Noise), OPTICS (Ordering Points to Identify Clustering Structure), etc.
 
-2.  Continuous Random Variable: Range of the observable value has some interval, bounded or unbounded. For instance, weight of different people in a class.
+-   **Hierarchical Based Methods:** Forms a tree-type structure based on the hierarchy. Later, new clusters are formed using the previously formed one. It is further divided into two categories:
 
-## Density Functions
+    -   Agglomerative (bottom-up approach)
 
-### **Probability Mass Function** **(PMF)**
+    -   Divisive (top-down approach)
 
-The probability mass function (PMF) a discrete random variable is the likelihood that the variable takes on a given value. Mathematically,\
-$$  f(x) = P(X = x) $$
+        Examples include CURE (Clustering Using Representatives), BIRCH (Balanced Iterative Reducing Clustering and using Hierarchies), etc.
 
-which follows the following properties:
+-   **Partitioning Methods:** Partitions the datapoints into $k$ clusters and each partition forms one cluster. Focus is optimizing an objective criterion similarity function. For instance, K-means, CLARANS (Clustering Large Applications based upon Randomized Search), etc.
 
-$$  f(x) \geq 0 \mbox{ for any $x$ \(\epsilon\)
-$S$ } $$\
+-   **Grid-based Methods:** Data space is formulated into a finite number of cells that form. Such as, STING (Statistical Information Grid), WaveCluster, CLIQUE (CLustering In Quest), etc.
 
-$$  \sum_{x \epsilon S} f(x) = 1  $$
+## Density Functions Visualization
 
-Code snippet for calculating PMF of a discrete random variable which follows binomial distribution:
+### K-means Clustering
 
-{{< embed _cluster_visual.ipynb#pmf-binomial echo=true >}}
+It is the simplest clustering algorithm. It partitions given $n$ observations into predefined $k$ clusters. The basis for such clustering is the nearest mean from the $k$ centroids. Clusters formed in K-Means are spherical or convex in shape.
 
-Then we can plot the PMF of that variable better visualization
+Code snippet for K-means clustering on the Palmer Penguins dataset:
 
-{{< embed _cluster_visual.ipynb#fig-pmf >}}
+{{< embed _cluster_visual.ipynb#kmc echo=true >}}
+
+If the user choose number of clusters to be $3$ and relevant features for clustering are *Flipper Length (mm)* and *Body Mass (g),* we can observe the following clustering:
+
+{{< embed _cluster_visual.ipynb#fig-kmc >}}
+
+We can observe the centroid (marked as red circle) of the three clusters from K-means clustering.
 
 ### 
 
-### **Probability Density Function** **(PDF)**
+### DBSCAN (Density-Based Spatial Clustering of Applications with Noise)
 
-The probability density function (PDF) a continuous random variable is the likelihood that the variable lies on a given range. Mathematically,\
-$$ \int_{a}^{b} f(x)dx = P(a< X <b) \mbox{ for any $a, b$ \(\epsilon\) $S$ satisfying a < b }$$
+Partitioning methods (K-means, PAM clustering) and hierarchical clustering focus on finding spherical-shaped clusters or convex clusters. As a result, they are suitable only for compact and well-separated clusters. Moreover, their performance deteriorate with the presence of noise and outliers in the data. DBSCAN can handle dataset containing non-convex shape clusters and outliers. The basis for this clustering are the maximum distance between two samples for them to be considered neighbors and the minimum number of samples in a neighborhood within that radius.
 
-which follows the following properties:
+Code snippet for DBSCAN on the Palmer Penguins dataset:
 
-$$  f(x) \geq 0 \mbox{ for any $x$ \(\epsilon\)
-$S$ } $$
+{{< embed _cluster_visual.ipynb#dbscan echo=true >}}
 
-$$  \int_{x \epsilon S} f(x)dx = 1  $$
+If the user choose the maximum distance between two samples to be $75$, the minimum number of samples in a neighborhood within that radius to be $15$ and relevant features for clustering are *Flipper Length (mm)* and *Body Mass (g)*, we can observe the following clustering:
 
-### **Cumulative Distribution Function** **(CDF)**
+{{< embed _cluster_visual.ipynb#fig-dbscan >}}
 
-The cumulative distribution function (PDF) a random variable is the likelihood that the variable is bounded within a given value. Mathematically,
-
-$$ F(x) = \sum_{z \epsilon S, z \leq x } f(z) \mbox{ for discrete random variables }$$\
-$$ F(x) = \int_{- \infty}^{x} f(z)dz  \mbox{ for continuous random variables }$$
-
-Furthermore,
-
-$$  P(a< X \leq b) = F(b) - F(a)  $$
-
-## 
+Even though it got us three clusters, this one is quite different from the previous one we got from K-means clustering. This clustering provides irregular shape other than the spherical-shaped clusters or convex clusters.
