--- a/about.qmd
+++ b/about.qmd
@@ -4,16 +4,25 @@ image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
+
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/md-shahedul-haque-shawon-5023491b7/
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/Md-Shahedul-Haque
 ---
 
-About this blog
+This blog is a part of my graduate course on Machine Learning (CS 5805).
+
+Articles are on :
+
+1.  Probabilistic Theory and Random Variable
+
+2.  Clustering
+
+3.  Linear and Nonlinear Regression
+
+4.  Classification
+
+5.  Anomaly / Outlier Detection
