Fixed colab jupyter notebook issues

--- a/posts/randomVariable/index.qmd
+++ b/posts/randomVariable/index.qmd
@@ -8,7 +8,7 @@ image: "rv.png"
 notebook-view:
   - notebook: _rv_visual.ipynb
     title: "Random Variable with Scipy Library"
-    url: https://colab.research.google.com/drive/1-9rDrxgVgGw9JspIUhjT79ANonsbJrPp
+    # url: https://colab.research.google.com/drive/1-9rDrxgVgGw9JspIUhjT79ANonsbJrPp
 ---
 
 ## Probability Theory and Random Variable in Machine Learning
