--- a/posts/classification/index.qmd
+++ b/posts/classification/index.qmd
@@ -8,7 +8,7 @@ image: "classification.png"
 notebook-view:
   - notebook: _classification_visual.ipynb
     title: "Classification with scikit-learn Library"
-    url: https://colab.research.google.com/drive/1p0rScO2OY9f5UO8qNiHj7b6EiBGE7wcl#scrollTo=a6ajWqcZE6c5
+    # url: https://colab.research.google.com/drive/1p0rScO2OY9f5UO8qNiHj7b6EiBGE7wcl#scrollTo=a6ajWqcZE6c5
 ---
 
 ## Classification in Machine Learning {#sec-listTypes}
