--- a/posts/clustering/index.qmd
+++ b/posts/clustering/index.qmd
@@ -8,7 +8,7 @@ image: "cluster.png"
 notebook-view:
   - notebook: _cluster_visual.ipynb
     title: "Clustering with scikit-learn Library"
-    url: https://colab.research.google.com/drive/1vjOGlh6ETKQdU_5ZYvwv6UrEZ8Rgshb9#scrollTo=VBhXxpLoE6c6
+   # url: https://colab.research.google.com/drive/1vjOGlh6ETKQdU_5ZYvwv6UrEZ8Rgshb9#scrollTo=VBhXxpLoE6c6
 ---
 
 ## Clustering in Machine Learning
