--- a/posts/regression/index.qmd
+++ b/posts/regression/index.qmd
@@ -9,6 +9,7 @@ notebook-view:
   - notebook: _regression_visual.ipynb
     title: "Linear and Nonlinear Regression with scikit-learn Library"
     # url: https://colab.research.google.com/drive/196SAQVmUmIH0K-6PqxwuliTGEdAjcexd#scrollTo=2CxyvQ57BVTD
+    url: https://github.com/Md-Shahedul-Haque/MachineLearningBlogs/blob/main/posts/regression/_regression_visual.ipynb
 ---
 
 ## Regression in Machine Learning  {#sec-listTypes}
